--- a/css/styles.css
+++ b/css/styles.css
@@ -12,22 +12,101 @@
 body {
   font-family: 'Roboto', sans-serif;
   line-height: 1.3;
+  height: 100vh;
 }
 
 input {
-  display: inline-block;
+  display: block;
   width: 100%;
+}
+
+.container {
+  max-width: 85%;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.container-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
 }
 
 /* Header */
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
+  border-bottom: 1px solid #000;
+  font-size: 1.4rem;
 }
 
 /* Linked List */
 
+.linked-list-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: calc(100% - 81px);
+}
+
+.linked-list {
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+  gap: 10px;
+}
+
+.node-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.node-data {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: #000;
+  color: #fff;
+  font-weight: bold;
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.node-arrow {
+  font-size: 3rem;
+}
+
 /* Options */
+
+.options {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
+.option-btn {
+  width: 100%;
+  border: none;
+  padding: 10px 20px;
+  font-size: 1.4rem;
+  font-weight: 600;
+  opacity: 1;
+  transition: opacity 1000ms;
+}
+
+.option-btn:hover {
+  opacity: .5;
+}
+
+.option-input {
+  display: block;
+  margin: 10px 0;
+  padding: 5px;  
+  outline: none;
+  font-size: 1rem;
+}
