--- a/css/styles.css
+++ b/css/styles.css
@@ -53,8 +53,7 @@ input {
   display: flex;
   align-items: center;
   margin-top: 40px;
-  overflow-x: auto;
-  padding: 0 0 20px;
+  /* overflow-x: auto; */
 }
 
 .node-container {
@@ -64,8 +63,8 @@ input {
 }
 
 .node-data {
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   background-color: #000;
   color: #fff;
@@ -76,9 +75,70 @@ input {
   align-items: center;
 }
 
+@keyframes newNodeAnimation {
+  0% {
+    transform: scale(0);
+  }
+
+  80% {
+    transform: scale(120%);
+  }
+
+  100% {
+    transform: scale(100%);
+  }
+}
+
+@keyframes nextNodeAnimation {
+  0% {
+    transform: scale(100%);
+  }
+
+  70% {
+    transform: scale(120%);
+  }
+}
+  
 .node-arrow {
-  font-size: 3rem;
+  font-size: 3.5rem;
   margin: 0 20px;
+  position: relative;
+  z-index: -100;
+}
+
+@keyframes newArrowAnimation {
+  0% {
+    transform: translate(-150%);
+    opacity: 1;
+  }
+
+  80% {
+    transform: translate(20%);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translate(0);
+    opacity: 1;
+  }
+}
+
+@keyframes nextArrowAnimation {
+  0% {
+    transform: rotate(0);
+  }
+
+  40% {
+    transform: rotate(20deg);
+  }
+
+  80% {
+    transform: rotate(-20deg);
+  }
+
+  100% {
+    transform: rotate(0);
+  }
 }
 
 /* Options */
