--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,43 @@ input {
     transform: scale(120%);
   }
 }
+
+.node-data .data.remove-data {
+  animation: removeNodeDataAnimation 1000ms 1 forwards;
+}
+
+.node-data .data.show-data {
+  animation: showNodeDataAnimation 1000ms 1 forwards;
+}
+
+@keyframes removeNodeDataAnimation {
+  0% {
+    transform: scale(1);
+  }
+
+  60% {
+    transform: scale(1.5);
+  }
+
+  100% {
+    transform: scale(0);
+  }
+}
+
+@keyframes showNodeDataAnimation {
+  0% {
+    transform: scale(0);
+  }
+
+  50% {
+    transform: scale(1.5);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+
+}
   
 .node-arrow {
   font-size: 3.5rem;
@@ -169,13 +206,14 @@ input {
 /* Options */
 
 .options {
-  display: grid;
+  display: flex;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
   margin-bottom: 50px;
 }
 
 .option-btn {
+  flex: 1;
   width: 100%;
   border: none;
   padding: 10px 20px;
