--- a/css/styles.css
+++ b/css/styles.css
@@ -118,14 +118,16 @@ input {
 /* Options */
 
 .options {
-  display: flex;
+  display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
   margin-bottom: 50px;
+  position: fixed;
+  bottom: 0;
+  width: calc(85% - 40px);
 }
 
 .option-btn {
-  flex: 1;
   width: 100%;
   border: none;
   padding: 10px 20px;
@@ -143,4 +145,21 @@ input {
   padding: 5px;  
   outline: none;
   font-size: 1rem;
+}
+
+/* Error */
+
+.error {
+  color: rgb(218, 23, 23);
+  font-weight: bold;
+  display: none;
+}
+
+.error.show {
+  display: block;
+}
+
+.error i {
+  margin-right: 5px;
+  animation: errorAnimation 500ms;
 }
