--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ input {
 .options {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-rows: 1fr;
   gap: 20px;
   margin-bottom: 50px;
   position: fixed;
@@ -135,10 +136,13 @@ input {
   padding: 10px 20px;
   font-size: 1.4rem;
   font-weight: 600;
+  background-color: #ccc;
+  transform: scale(1);
+  transition: transform 500ms;
 }
 
 .option-btn:hover {
-  opacity: .75;
+  transform: scale(1.05);
 }
 
 .option-input {
@@ -147,6 +151,53 @@ input {
   padding: 5px;  
   outline: none;
   font-size: 1rem;
+}
+
+/* Remove Option Button */
+
+.option-btn-red {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #d30017;
+  color: #fff;
+  position: relative;
+  z-index: 1000;
+}
+
+.select-btn {
+  display: inline-block;
+  width: 100%;
+  border: 1px solid #000;
+  font-size: 18px;
+  padding: 5px;
+  position: relative;
+  transform: translate(0, calc(-100% + -2px));
+  transition: transform 1000ms;
+  z-index: 100;
+}
+
+.select-btn:hover {
+  font-weight: bold;
+}
+
+.select-btn:nth-child(2) {
+  z-index: 10;
+  border-top: none;
+  transform: translate(0, calc(-200% + -2px));
+}
+
+.select-btn.show {
+  transform: translate(0);
+}
+
+.fa-gear {
+  transition: transform 1000ms;
+}
+
+.option-input-remove {
+  /* transform: translate(0, calc(-200% + -2px)); */
+  display: none;
 }
 
 /* Error */
