--- a/css/animations.css
+++ b/css/animations.css
@@ -92,6 +92,22 @@
   }
 }
 
+/* Remove animations */
+
+@keyframes removeNodeAnimation {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.5);
+  }
+
+  100% {
+    transform: scale(0);
+  }
+}
+
 /* Error animation */
 
 @keyframes errorAnimation {
