--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,11 @@ input {
   animation-delay: 850ms;
 }
 
+.node-data.remove-node, 
+.node-arrow.remove-node {
+  animation: removeNodeAnimation 1000ms 1 forwards;
+}
+
 /* Options */
 
 .options {
@@ -196,7 +201,6 @@ input {
 }
 
 .option-input-remove {
-  /* transform: translate(0, calc(-200% + -2px)); */
   display: none;
 }
 
