--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,16 @@ body {
   font-family: 'Roboto', sans-serif;
   line-height: 1.3;
   height: 100vh;
+  position: relative;
 }
+
+/* body::after {
+  content: "";
+  background-color: #000;
+  inset: 0;
+  opacity: .1;
+  position: absolute;
+} */
 
 input {
   display: block;
@@ -192,12 +201,17 @@ input {
   transform: translate(0, calc(-200% + -2px));
 }
 
-.select-btn.show {
+.selects-container.show .select-btn {
   transform: translate(0);
+}
+
+.fa-gear.show {
+  transform: rotate(90deg);
 }
 
 .fa-gear {
   transition: transform 1000ms;
+  transform: rotate(-90deg);
 }
 
 .option-input-remove {
@@ -219,4 +233,66 @@ input {
 .error i {
   margin-right: 5px;
   animation: errorAnimation 500ms;
+}
+
+/* Settings */
+
+.settings {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  background: #000;
+  color: #fff;
+  padding: 1rem;
+  width: 250px;
+  transform: translate(-100%);
+  transition: transform 1000ms;
+}
+
+.settings.show {
+  transform: translate(0);
+}
+
+/* Settings Header */
+
+.settings-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  margin-bottom: 30px;
+  padding: 10px;
+  border-bottom: 1px solid #fff;
+}
+
+.settings-header i {
+  font-size: 1.5rem;
+}
+
+.settings-header i:hover {
+  color: #ccc;
+}
+
+/* Settings Inputs */
+
+.settings-inputs label {
+  font-weight: bold;
+}
+
+.setting-input {
+  display: block;
+  margin: 10px 0 20px;
+  padding: 5px;  
+  outline: none;
+  font-size: 1rem;
+}
+
+/* Settings Button */
+
+.setting-btn {
+  width: 100%;
+  padding: 5px;
+  font-weight: bold;
+  font-size: 1rem;
+  margin-top: 25px;
 }
