--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   line-height: 1.3;
-  height: 100vh;
+  /* height: 100vh; */
   background-color: #fff;
   transition: background-color 1000ms;
 }
@@ -43,6 +43,7 @@ input {
   justify-content: space-between;
   align-items: center;
   height: 80px;
+  gap: 10px;
 }
 
 /* Header */
@@ -65,6 +66,7 @@ input {
   overflow-x: auto;
   scrollbar-color: black #eee;
   scrollbar-width: thin;
+  min-height: 160px;
 }
 
 .linked-list {
@@ -143,15 +145,20 @@ input {
 
 /* Options */
 
+.options-container {
+  min-height: calc(100vh - 82px - 160px);
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
 .options {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-auto-rows: 1fr;
   gap: 20px;
   margin-bottom: 50px;
-  position: fixed;
-  bottom: 0;
-  width: calc(85% - 40px);
 }
 
 .option-btn {
@@ -257,7 +264,7 @@ input {
   width: 250px;
   transform: translate(-100%);
   transition: transform 1000ms;
-  z-index: 100;
+  z-index: 10000;
 }
 
 body.show-menu .settings {
@@ -306,4 +313,19 @@ body.show-menu .settings {
   font-weight: bold;
   font-size: 1rem;
   margin-top: 25px;
+}
+
+
+/* Media Queries */
+
+@media (max-width: 600px) {
+
+  .header {
+    font-size: 1rem;
+  }
+
+
+  .header-title {
+    font-size: 1.3rem;
+  }
 }
