--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   line-height: 1.3;
-  /* height: 100vh; */
+  height: 100vh;
   background-color: #fff;
   transition: background-color 1000ms;
 }
@@ -66,7 +66,7 @@ input {
   overflow-x: auto;
   scrollbar-color: black #eee;
   scrollbar-width: thin;
-  min-height: 160px;
+  min-height: 170px;
 }
 
 .linked-list {
@@ -146,7 +146,7 @@ input {
 /* Options */
 
 .options-container {
-  min-height: calc(100vh - 82px - 160px);
+  min-height: calc(100vh - 82px - 170px - 20px);
   padding-top: 20px;
   display: flex;
   flex-direction: column;
@@ -240,11 +240,12 @@ input {
 .error {
   color: rgb(218, 23, 23);
   font-weight: bold;
-  display: none;
+  opacity: 0;
+  height: 20px;
 }
 
 .error.show {
-  display: block;
+  opacity: 1;
 }
 
 .error i {
